# template_cli_python

./: .cz.toml  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  cz.toml  noxfile.py  pyproject.toml  taplo.toml
.github/: markdown-rules.md
_vscode/: tasks.json
context/: _envrc  mise.toml
docs/: dev_guide.md  dev_guideline.md  development-guide-basic.md  development-guide-tools.md  development-guidelines.md
release/: CHANGELOG.md.j2
src/common/: arithmetic_ops.py
src/template_cli_python/: __init__.py  __main__.py  cli.py
template_cli_python/: __main__.py  cli.py  cli_mean.py
template_cli_python/common/: arithmetic_ops.py
tests/: test_arithmetic_ops.py  test_cli.py  test_cli_mean.py  test_init.py  test_main.py
